--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "shareGuideMask"
   ],
   "author": "jing",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vue": "^2.6.12"
+  }
 }
